--- a/blog/templates/blog/the_best_blog_detail.html
+++ b/blog/templates/blog/the_best_blog_detail.html
@@ -11,11 +11,19 @@
         </div>
         <div class="col-8">
             <p>{{ object.content }}</p>
+            <p>создан {{ object.date_of_creation }}</p>
         </div>
         <div class="'col-1">
-            <p>{{ object.get_sign_of_publication_display }}</p>
-</div>
+            <p>статус публикации: {{ object.get_sign_of_publication_display }}</p>
+        </div>
+        <button type="button" class='second' name="update" onclick="window.location.href='{% url 'blog:update' object.pk %}';">
+            Редактировать
+        </button>
+        <button type="button" class='second' name="delete" onclick="window.location.href='{% url 'blog:delete' object.pk %}';">
+            Удалить
+        </button>
     </div>
+</div>
 
 {% endblock %}
 
