--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -25,9 +25,23 @@
       <li class="nav-item">
         <a class="nav-link" href="{% url 'catalog:category_list' %}">Список категорий</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://argo.academic.ru/5789/%D1%85%D1%83%D1%8F%D1%87%D0%B5%D1%87%D0%BD%D0%B0%D1%8F">Министерство культуры</a>
-      </li>
+        {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a class="nav-link" href="https://argo.academic.ru/5789/%D1%85%D1%83%D1%8F%D1%87%D0%B5%D1%87%D0%BD%D0%B0%D1%8F">Министерство культуры</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:profile' %}">Профиль</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:logout' %}">Выход</a>
+                {% else %}
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:login' %}">Авторизация</a>
+            </li>
+			<li class="nav-item">
+                <a class="nav-link" href="{% url 'users:register' %}">Зарегистрироваться</a>
+            </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
