--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -1,3 +1,4 @@
+{% load custom_tag %}
 {% load static %}
 
 <!DOCTYPE html>
@@ -22,21 +23,27 @@
             <li class="nav-item">
                 <a class="nav-link" href="/">Главная</a>
             </li>
+			{% if request.user|has_group:"Moderators" %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'catalog:moderate_product_list' %}">Модерация товаров</a>
+                </li>
+            {% endif %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'catalog:product_list' %}">Список товаров</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'catalog:category_list' %}">Список категорий</a>
+                <a class="nav-link" href="{% url 'catalog:product_list' %}">Магазин</a>
             </li>
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="https://argo.academic.ru/5789/%D1%85%D1%83%D1%8F%D1%87%D0%B5%D1%87%D0%BD%D0%B0%D1%8F">Министерство культуры</a>
+                    <a class="nav-link" href="{% url 'catalog:my_product_list' %}">Мои товары</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'catalog:category_list' %}">Категории</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'users:profile' user.pk %}">Профиль</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'users:logout' %}">Выход</a>
+                </li>
                     {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'users:login' %}">Авторизация</a>
